--- a/app/src/main/res/layout/fragment_repo_all_list.xml
+++ b/app/src/main/res/layout/fragment_repo_all_list.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <include layout="@layout/toolbar_main" />
 
-    <FrameLayout
+    <android.support.v7.widget.RecyclerView
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/fragment_container"
+        android:id="@+id/repo_all_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    </FrameLayout>
+    </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
-
-
