On the process of writing viewpager of repository show page

--- a/app/src/main/res/layout/activity_show_page.xml
+++ b/app/src/main/res/layout/activity_show_page.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include layout="@layout/toolbar_note_show" />
+    <include layout="@layout/toolbar_tab" />
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/note_viewpager"
+        android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
