--- a/app/src/main/res/layout/toolbar_tab.xml
+++ b/app/src/main/res/layout/toolbar_tab.xml
@@ -8,7 +8,7 @@
     <include layout="@layout/toolbar_main" />
 
     <android.support.design.widget.TabLayout
-        android:id="@+id/note_tabs"
+        android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabGravity="fill"
