--- a/app/src/main/res/layout/list_item_with_name.xml
+++ b/app/src/main/res/layout/list_item_with_name.xml
@@ -5,7 +5,7 @@
     android:padding="8dp">
 
     <TextView
-        android:id="@+id/repo_name"
+        android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
