--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -14,4 +14,6 @@
 
     </android.support.v7.widget.RecyclerView>
 
-</LinearLayout>
+    <include layout="@layout/button_floating_add"/>
+
+</RelativeLayout>
