Fixed bug encountered when rotating the screen. Alert user when the network connection is lost.

--- a/app/src/main/res/menu/delete.xml
+++ b/app/src/main/res/menu/delete.xml
@@ -5,6 +5,6 @@
     <item
         android:id="@+id/delete"
         android:icon="@drawable/ic_menu_delete"
-        android:title="@string/edit_note"
+        android:title="@string/delete"
         app:showAsAction="ifRoom|withText"/>
 </menu>
