--- a/app/src/main/res/layout/list_item_note.xml
+++ b/app/src/main/res/layout/list_item_note.xml
@@ -1,21 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="8dp">
 
-    <TextView
-        android:id="@+id/note_title"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Note Title"/>
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/note_date"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Note Date"/>
+        <TextView
+            android:id="@+id/note_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Note Title"/>
+
+        <TextView
+            android:id="@+id/note_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Note Date"/>
+    </LinearLayout>
+
 
 </LinearLayout>
